name:                cairo-example
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/cairo-example#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable cairo-example
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gi-gtk >= 3.0
                     , haskell-gi-base -any
                     , gi-glib -any
                     , gi-gtk -any
                     , gi-gtk-hs >= 0.3.4.1 && < 0.4
                     , gi-gdk -any
                     , transformers -any
                     , array -any
                     , gi-cairo -any
                     , random -any
                     , cairo >=0.13.1.1 && <0.14
